--- a/backend/package.json
+++ b/backend/package.json
@@ -2,10 +2,10 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
     "start": "nodemon src/server.js"
   },
+  "type": "module",
   "keywords": [],
   "author": "barra",
   "license": "GPL-3.0-only",
