feat: add auth with basic jwt token

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -4,3 +4,6 @@ MARIADB_HOST="localhost"
 MARIADB_USER="root"
 MARIADB_PASSWORD=""
 MARIADB_DATABASE="gastrono"
+
+JWT_SECRET="correct-horse-battery-staple"
+REFRESH_SECRET="staple-battery-horse-correct"
