fix: improve security by always run bcrypt on login

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -7,3 +7,5 @@ MARIADB_DATABASE="gastrono"
 
 JWT_SECRET="correct-horse-battery-staple"
 REFRESH_SECRET="staple-battery-horse-correct"
+
+DUMMY_HASH="$2b$10$dk6vD5lr/1SbEBnz4oAWaO1b53K0A3E.EqUG3zIhhVlM2PEp6ECs."
